toggle visibility of select before changing selected value for each option. This brings selectAll performance in Edge with 4000 options down from 20 seconds to around 1 second. Fixes #20.

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -7,6 +7,7 @@
 
 // Rules
 select.bs-select-hidden,
+.bootstrap-select > select.bs-select-hidden,
 select.selectpicker {
   display: none !important;
 }
