--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -25,6 +25,7 @@
 
 // Rules
 select.bs-select-hidden,
+.bootstrap-select > select.bs-select-hidden,
 select.selectpicker {
   display: none !important;
 }
